# smart-transcriber

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/audio_transcriber/: __init__.py  __main__.py  analyze.py  cli.py  render.py  transcribe.py  utils.py
src/smart_transcriber/: __init__.py  __main__.py  analyze.py  cli.py  render.py  utils.py
tests/: test_analyze.py  test_cli.py  test_render.py  test_transcribe.py  test_utils.py
