[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-transcriber"
dynamic = ["version"]
description = "Transcribe meeting audio and generate structured notes using OpenAI APIs"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.11"
dependencies = ["openai>=1.0.0,<3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["transcription", "meeting-notes", "openai", "whisper", "audio"]

[project.urls]
Homepage = "https://github.com/<user>/audio-transcriber"
Repository = "https://github.com/<user>/audio-transcriber"
Issues = "https://github.com/<user>/audio-transcriber/issues"

[project.scripts]
transcribe = "audio_transcriber.cli:main"

[tool.hatch.version]
path = "src/audio_transcriber/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_transcriber"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
